--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ inflection==0.5.1
 mysqlclient==2.2.0
 oauthlib==3.2.2
 packaging==23.1
+Pillow==10.0.1
 pycparser==2.21
 PyJWT==2.8.0
 python-decouple==3.8
